<?xml version="1.0" encoding="utf-8"?>
<!-- @author judith -->
<resources>
    <string name="app_name">Magic Playlist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Magic Playlist</string>
    <string name="my_playlists">My Playlists</string>
    <string name="playlist_generator">Playlist Generator</string>
    <string name="playlist_browser">Playlist Browser</string>
    <string name="priority_list">My Media Services</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="go">Go!</string>
    <string name="generate_playlist">Generate Playlist</string>
    <string name="start_generator">Start Generator!</string>
    <string name="selected_items">Show selected items</string>
    <string name="local_file">Local file</string>
    <string name="remote_soundcloud">Soundcloud</string>
    <string name="remote_spotify">Spotify</string>
    <string name="artist_song">No song playing...</string>
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="previousSong"><![CDATA[<]]></string>
    <string name="nextSong"><![CDATA[>]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Up">Up</string>
    <string name="down">Down</string>
    <string name="songs_count_limit_text">Songs count</string>
    <string name="search">Start search!</string>
    <string name="star">Star this playlist!</string>
    <string name="upload">Upload this playlist?</string>
    <string name="save">Save this playlist?</string>
    <string-array name="menu_array">
        <item>My Playlists</item>
        <item>Playlist Generator</item>
        <item>Playlist Browser</item>
        <item>My Media Services</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="spotify_login">Spotify-Login</string>
    <string name="confirm">Confirm changes!</string>
</resources>
