<!-- @author judith -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@drawable/listening"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_marginTop="40dp"
        android:text="@string/my_playlists"
        android:layout_gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button6"
        android:layout_marginTop="20dp"
        android:text="@string/playlist_generator"
        android:layout_gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button7"
        android:layout_marginTop="20dp"
        android:text="@string/playlist_browser"
        android:layout_gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button8"
        android:layout_marginTop="20dp"
        android:text="@string/priority_list"
        android:layout_gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
