<?xml version="1.0" encoding="utf-8"?>
<!-- author judith -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:background="@drawable/listening"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight=".275"
        android:orientation="horizontal">
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:orientation="vertical">
        <Button
            android:id="@+id/myPlaylistsBtn"
            android:text="@string/my_playlists"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/btnStyleOrange" />
        <Button
            android:id="@+id/playlistsGeneratorBtn"
            android:text="@string/playlist_generator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/btnStyleOrange" />
        <Button
            android:id="@+id/otherPlaylistsBtn"
            android:text="@string/playlist_browser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/btnStyleOrange" />
        <Button
            android:id="@+id/settingsBtn"
            android:text="@string/priority_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/btnStyleOrange" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.025">
    </LinearLayout>
</LinearLayout>