<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controllers.generatorFragments.GeneratorSettingsFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="@drawable/listening"
        tools:context=".GeneratorActivity">
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight=".275"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:orientation="vertical">
            <Button
                android:id="@+id/button6"
                android:text="@string/genres"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="genresClicked"
                style="@style/btnStyleOrange" />
            <Button
                android:id="@+id/button7"
                android:text="@string/artists"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="artistsClicked"
                style="@style/btnStyleOrange" />
            <Button
                android:id="@+id/button8"
                android:text="@string/songs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="songsClicked"
                style="@style/btnStyleOrange" />
            <Button
                android:id="@+id/testStart"
                android:text="@string/test_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="buttonClicked"
                style="@style/btnStyleOrange" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.025">
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
