<?xml version="1.0" encoding="utf-8"?>
<!-- author judith -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="controllers.mainFragments.browserMainViewGroup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:background="@drawable/listening">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:weightSum="1.0"
        android:layout_alignParentRight="true">
        <LinearLayout
            android:layout_weight="0.2"
            android:layout_height="0dp"
            android:layout_width="0dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">
            <Button
                android:id="@+id/fastSearch"
                android:text="@string/playlists"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                style="@style/btnStyleOrange"
                android:layout_weight="0.1"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_weight="0.1"
                android:layout_height="0dp"
                android:layout_width="0dp"/>
            <Button
                android:id="@+id/searchGenre"
                android:text="@string/genres"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                style="@style/btnStyleOrange"
                android:layout_weight="0.1"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_weight="0.1"
                android:layout_height="0dp"
                android:layout_width="0dp"/>
            <Button
                android:id="@+id/searchArtist"
                android:text="@string/artists"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                style="@style/btnStyleOrange"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_weight="0.1"
                android:layout_height="0dp"
                android:layout_width="0dp"/>
            <Button
                android:id="@+id/startSearch"
                android:text="@string/search"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="0.1"
                style="@style/btnStyleOrange"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_weight="0.1"
                android:layout_height="0dp"
                android:layout_width="0dp"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.2" />
    </LinearLayout>
</RelativeLayout>
